# z6ds

./: .gitignore  Cargo.toml  README.md
apps/desktop/: index.html  package.json  pnpm-lock.yaml
apps/desktop/public/tft-lcd-development-board/: pin_anchors.json
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: build_ops.rs  event_bridge.rs  fs_ops.rs  lib.rs  netlist_ops.rs  sim_ops.rs
apps/desktop/src/components/: EmptyState.css  EmptyState.tsx  Icons.tsx
apps/desktop/src/editor/: EditorHost.css  EditorHost.tsx  editorApi.ts  languageForPath.ts
apps/desktop/src/hooks/: useAppEvent.ts
apps/desktop/src/icons/: FileIcon.css  FileIcon.tsx  materialIconTheme.ts
apps/desktop/src/lib/: contracts.ts  events.ts  tauriApi.ts
apps/desktop/src/panels/: BuildOutputPanel.css  BuildOutputPanel.tsx  SerialTerminalPanel.css  SerialTerminalPanel.tsx
apps/desktop/src/sim3d/: BoardDisc1.tsx  SceneView.css  SceneView.tsx  boardModel.ts
apps/desktop/src/theme/: monaco-theme.ts  workbench-theme.css
apps/desktop/src/workbench/: ExplorerPanel.css  ExplorerPanel.tsx  WorkbenchShell.css  WorkbenchShell.tsx  WorkbenchToolbar.css  WorkbenchToolbar.tsx
crates/z6ds-build/: Cargo.toml
crates/z6ds-build/src/: diagnostics.rs  lib.rs  orchestrator.rs  toolchain.rs
crates/z6ds-build/tests/: bdd_m06.rs  which.rs
crates/z6ds-core/: Cargo.toml
crates/z6ds-core/src/: contracts.rs  discovery.rs  event_bus.rs  ioc.rs  lib.rs  netlist.rs
crates/z6ds-sim/: Cargo.toml
crates/z6ds-sim/src/: engine.rs  lib.rs  renode_adapter.rs  session.rs  task.rs
crates/z6ds-sim/src/peripherals/: button.rs  hc_sr04.rs  led.rs  mod.rs
crates/z6ds-sim/tests/: renode_integration.rs
crates/z6ds-uart/: Cargo.toml
crates/z6ds-uart/src/: lib.rs
