[workspace]
resolver = "2"
members = [
    "crates/z6ds-core",
    "crates/z6ds-build",
    "crates/z6ds-sim",
    "crates/z6ds-uart",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt", "macros", "time", "net"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
