[package]
name = "z6ds-build"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "M06 — STM32CubeIDE make build orchestrator"

[dependencies]
z6ds-core = { path = "../z6ds-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
