[package]
name = "z6ds-uart"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "M13 — UART bridge between M09 engine and M14 Serial UI"

[dependencies]
z6ds-core = { path = "../z6ds-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
