[package]
name = "z6ds-desktop"
version.workspace = true
description = "z6ds desktop shell (Tauri)"
authors = ["z6ds"]
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "appsdesktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
z6ds-core = { path = "../../../crates/z6ds-core" }
z6ds-build = { path = "../../../crates/z6ds-build" }
z6ds-sim = { path = "../../../crates/z6ds-sim" }
z6ds-uart = { path = "../../../crates/z6ds-uart" }
base64 = { workspace = true }
tauri = { version = "2", features = [] }
tokio = { workspace = true }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"

